fix: blog carousel stacks to single column on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4798,6 +4798,18 @@ section:last-of-type {
   .pricing-dots {
     display: none;
   }
+
+  .blog-track {
+    flex-direction: column;
+  }
+
+  .blog-track .blog-card {
+    width: 100%;
+  }
+
+  .blog-dots {
+    display: none;
+  }
 }
 
 @media (max-width: 480px) {}
